Сorrection for MR